--- a/linear_svm_rakesh.ipynb
+++ b/linear_svm_rakesh.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,19 +17,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# X contains 3 images of dimension 3x4\n",
-    "# W contains weights for each pixel in an image of dimension 4x3\n",
-    "# y contains the label for each class"
+    "#X contains 3 images of dimension 3x4\n",
+    "#W contains weights for each pixel in an image of dimension 4x3\n",
+    "#y contains the label for each class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#svm_loss_naive"
+    "# svm_loss_naive"
    ]
   },
   {
@@ -101,6 +99,11 @@
       " [0. 0. 0.]]\n",
       "margin\n",
       " -110.6\n",
+      "dW after X[ 0 ] multiplied with loss counter value( 0 )added with class 1 \n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
       "i= 1\n",
       "scores\n",
       " [153.  328.3 213.2]\n",
@@ -128,16 +131,11 @@
       " [  0.  89.   0.]\n",
       " [  0. 132.   0.]\n",
       " [  0.  35.   0.]]\n",
-      "dW after X[ 1 ] multiplied with loss counter value( 1 )added with class 0 \n",
-      " [[-180.  180.    0.]\n",
-      " [ -89.   89.    0.]\n",
-      " [-132.  132.    0.]\n",
-      " [ -35.   35.    0.]]\n",
       "dW\n",
-      " [[-180.  180.    0.]\n",
-      " [ -89.   89.    0.]\n",
-      " [-132.  132.    0.]\n",
-      " [ -35.   35.    0.]]\n",
+      " [[  0. 180.   0.]\n",
+      " [  0.  89.   0.]\n",
+      " [  0. 132.   0.]\n",
+      " [  0.  35.   0.]]\n",
       "margin\n",
       " 61.20000000000002\n",
       "loss_counter\n",
@@ -145,32 +143,32 @@
       "loss added with margin\n",
       " 237.50000000000003\n",
       "dW after X[ 1 ]= [180  89 132  35]  is added in js 2 st column\n",
-      " [[-180.  180.  180.]\n",
-      " [ -89.   89.   89.]\n",
-      " [-132.  132.  132.]\n",
-      " [ -35.   35.   35.]]\n",
+      " [[  0. 180. 180.]\n",
+      " [  0.  89.  89.]\n",
+      " [  0. 132. 132.]\n",
+      " [  0.  35.  35.]]\n",
       "dW after X[ 1 ] multiplied with loss counter value( 2 )added with class 0 \n",
-      " [[-540.  180.  180.]\n",
-      " [-267.   89.   89.]\n",
-      " [-396.  132.  132.]\n",
-      " [-105.   35.   35.]]\n",
+      " [[-360.  180.  180.]\n",
+      " [-178.   89.   89.]\n",
+      " [-264.  132.  132.]\n",
+      " [ -70.   35.   35.]]\n",
       "i= 2\n",
       "scores\n",
       " [104.  204.7 163.3]\n",
       "correct_class_score\n",
       " 163.3\n",
       "dW\n",
-      " [[-540.  180.  180.]\n",
-      " [-267.   89.   89.]\n",
-      " [-396.  132.  132.]\n",
-      " [-105.   35.   35.]]\n",
+      " [[-360.  180.  180.]\n",
+      " [-178.   89.   89.]\n",
+      " [-264.  132.  132.]\n",
+      " [ -70.   35.   35.]]\n",
       "margin\n",
       " -58.30000000000001\n",
       "dW\n",
-      " [[-540.  180.  180.]\n",
-      " [-267.   89.   89.]\n",
-      " [-396.  132.  132.]\n",
-      " [-105.   35.   35.]]\n",
+      " [[-360.  180.  180.]\n",
+      " [-178.   89.   89.]\n",
+      " [-264.  132.  132.]\n",
+      " [ -70.   35.   35.]]\n",
       "margin\n",
       " 42.39999999999998\n",
       "loss_counter\n",
@@ -178,21 +176,21 @@
       "loss added with margin\n",
       " 279.9\n",
       "dW after X[ 2 ]= [ 20 147  12 174]  is added in js 1 st column\n",
-      " [[-540.  200.  180.]\n",
-      " [-267.  236.   89.]\n",
-      " [-396.  144.  132.]\n",
-      " [-105.  209.   35.]]\n",
-      "dW after X[ 2 ] multiplied with loss counter value( 1 )added with class 2 \n",
-      " [[-540.  200.  160.]\n",
-      " [-267.  236.  -58.]\n",
-      " [-396.  144.  120.]\n",
-      " [-105.  209. -139.]]\n",
+      " [[-360.  200.  180.]\n",
+      " [-178.  236.   89.]\n",
+      " [-264.  144.  132.]\n",
+      " [ -70.  209.   35.]]\n",
       "dW\n",
-      " [[-540.  200.  160.]\n",
-      " [-267.  236.  -58.]\n",
-      " [-396.  144.  120.]\n",
-      " [-105.  209. -139.]]\n",
-      "j == y[ 2 ], hence skipping\n"
+      " [[-360.  200.  180.]\n",
+      " [-178.  236.   89.]\n",
+      " [-264.  144.  132.]\n",
+      " [ -70.  209.   35.]]\n",
+      "j == y[ 2 ], hence skipping\n",
+      "dW after X[ 2 ] multiplied with loss counter value( 1 )added with class 2 \n",
+      " [[-360.  200.  160.]\n",
+      " [-178.  236.  -58.]\n",
+      " [-264.  144.  120.]\n",
+      " [ -70.  209. -139.]]\n"
      ]
     }
    ],
@@ -229,11 +227,13 @@
     "            print('loss_counter\\n',loss_counter)   \n",
     "            loss += margin                           #margin is added to the loss, and that class is \n",
     "            print('loss added with margin\\n',loss)   #contributing to loss\n",
-    "            dW[:,j] +=X[i]                           #X[i] pixel values are added to the dW in the jth class\n",
+    "            dW[:,j] +=X[i]                           #the gradient is only updated when margin > \n",
     "            print('dW after X[',i,']=',X[i],' is added in js',j,'st column\\n',dW)\n",
-    "            dW[:,y[i]] +=-loss_counter*X[i]          #X[i] multiplied with loss counter and take the difference \n",
-    "                                                     # from the corresponding class in dW \n",
-    "            print('dW after X[',i,'] multiplied with loss counter value(',loss_counter,')added with class',y[i],'\\n',dW)\n",
+    "                                                     #X[i] pixel values are added to the dW in the jth class\n",
+    "    \n",
+    "    dW[:,y[i]] +=-loss_counter*X[i]          #X[i] multiplied with loss counter and take the difference \n",
+    "                                            # from the corresponding class in dW \n",
+    "    print('dW after X[',i,'] multiplied with loss counter value(',loss_counter,')added with class',y[i],'\\n',dW)\n",
     "   \n",
     "     \n",
     "\n",
@@ -246,12 +246,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#svm_loss_vectorized"
+    "# svm_loss_vectorized"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -353,10 +353,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
